--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,19 @@
             "database": "SQL_bobby",
             "name": "robert",
             "username": "robert"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "database": "Movie",
+            "name": "robert",
+            "username": "robert"
         }
     ]
 }
